# architecture-patterns-with-python

./: README.md  pyproject.toml
Chapter 1/: model.py  test_allocate.py  test_equality.py  test_model.py
