[tool.poetry]
name = "architecture patterns with python"
version = "0.1.0"
description = ""
authors = ["Thiago <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
ipython = "^7.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
